# airline-agent

./: .editorconfig  .env.sample  .gitignore  CLAUDE.md  DEVELOPMENT.md  README.md  STABILITY.md  benign_dataset_results.csv  pyproject.toml  stability_data.json
.claude/: settings.json
.github/workflows/: benign.yml  ci.yml  stable.yml
data/: .gitignore  CHECKSUMS
frontend/: .gitignore  eslint.config.mjs  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.lint.json  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  manifest.ts
frontend/app/[[...threadId]]/: page.tsx
frontend/client/: schemas.gen.ts  services.gen.ts  types.gen.ts
frontend/client/@tanstack/: react-query.gen.ts
frontend/components/: assistant-metadata-section.tsx  chat-history.tsx  chat-list.tsx  chat.tsx  empty-screen.tsx  header-buttons.tsx  header.tsx  logo-lockup.tsx  message-assistant-tool.tsx  message.tsx  new-chat-button.tsx  prompt-form.tsx  providers.tsx  sidebar-actions.tsx  sidebar-desktop.tsx  sidebar-item.tsx  sidebar-items.tsx  sidebar-list.tsx  sidebar.tsx  theme-toggle.tsx
frontend/components/design-system-components/: ButtonClose.tsx  ChatCodeBlock.tsx  MessageAssistant.tsx  MessageMarkdown.tsx  Modal.common.tsx  ModalAlert.tsx  ModalAlertBasic.tsx  modalVariants.tsx
frontend/components/icons/: iconConsts.tsx  index.ts
frontend/components/next-scroll-restoration/: index.tsx
frontend/components/ui/: button.tsx  sheet.tsx
frontend/lib/: consts.ts  utils.ts
frontend/lib/hooks/: use-app-settings.tsx  use-resize-observer.tsx  use-screen.ts  use-scroll-anchor.tsx  use-scroll-to-bottom.tsx  use-sidebar.tsx  useClearHistory.tsx  useRateLimitedValue.tsx  useStreamMessage.tsx  useSyncHistoryTitles.tsx
frontend/lib/utils/: createCustomStringSort.tsx  getIsAppleOS.ts  keyboardShortcuts.tsx
frontend/providers/: rag-app-store-provider.tsx
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ToolRender.module.css  ToolRender.tsx
frontend/stores/: history-thread-store.tsx  messages-store.tsx  rag-app-store.tsx
frontend/types/: user-agent-data.d.ts
scripts/: aggregate_test_results.py  append_test_results.py  generate_flights.py  report_stability.py
src/airline_agent/: agent.py  constants.py  util.py
src/airline_agent/backend/: app.py
src/airline_agent/backend/routers/: agent.py  airline_agent.py
src/airline_agent/backend/schemas/: message.py  run.py  run_event.py
src/airline_agent/backend/services/: airline_chat.py  red_teaming_chat.py
src/airline_agent/cleanlab_utils/: cleanlab_agent.py  consult_utils.py  conversion_utils.py  create_new_demo_project.py  open_project.py  validate_utils.py
src/airline_agent/data_generation/: generate_flights.py
src/airline_agent/data_preparation/: fetch_faqs.py  fetch_flight_deals.py  fetch_flights.py  fetch_pages.py  generate_flights.py  utils.py
src/airline_agent/preprocessing/: create_vector_database.py
src/airline_agent/red_teaming/: agent.py
src/airline_agent/tools/: booking.py  flight_deals.py  flights.py  knowledge_base.py
src/airline_agent/types/: booking.py  flight_deals.py  flights.py  knowledge_base.py
src/airline_agent/utils/: llama_warnings.py
static/: airports.csv  routes.csv
tests/: conftest.py  constants.py  judge.py  test_booking.py  test_evaluations.py  test_guardrails.py  test_observability.py  test_remediations.py  util.py
tests/func/: test_basic.py  test_booking.py  test_conftest.py
tests/stable/: test_benign.py  test_evaluations.py  test_guardrails.py  test_observability.py  test_remediations.py
utils/: __init__.py  create_new_demo_project.py
(+1 files in other folders)
