[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airline-agent"
version = "0.1.0"
description = "A demo agent for an airline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "llama-index-core>=0.14.3",
  "llama-index-embeddings-openai>=0.5.1",
  "llama-index-llms-openai>=0.6.1",
  "llama-index-retrievers-bm25>=0.6.5",
  "pydantic>=2.11.9",
  "beautifulsoup4>=4.14.2",
  "html5lib>=1.1",
  "tqdm>=4.67.1",
]

[tool.hatch.envs.default]
installer = "uv"

[dependency-groups]
dev = [
  "mypy>=1.18.2",
  "requests>=2.32.5",
]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.18.2",
  "pytest",
  "types-requests>=2.32.4.20250913",
  "types-tqdm>=4.67.0.20250809",
]

[tool.hatch.envs.types.scripts]
check = "mypy --strict {args:src}"
