[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airline-agent"
version = "0.1.0"
description = "A demo agent for an airline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "beautifulsoup4>=4.14.2",
  "html5lib>=1.1",
  "llama-index-core>=0.14.3",
  "llama-index-embeddings-openai>=0.5.1",
  "llama-index-llms-openai>=0.6.1",
  "llama-index-retrievers-bm25>=0.6.5",
  "pydantic-ai>=1.0.13",
  "pydantic>=2.11.9",
  "python-dotenv>=1.0.0",
  "tqdm>=4.67.1",
  "cleanlab_codex>=1.0.29",
  "selenium>=4.10.0",
]

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.envs.default.scripts]
create-demo-project = "python -m airline_agent.cleanlab_utils.create_new_demo_project"
fetch-pages = "python -m airline_agent.data_preparation.fetch_pages --path {args:data/kb.json}"
create-vector-database = "python -m airline_agent.preprocessing.create_vector_database --data-path {args:data/kb.json} --vector-db-path data/vector-db"


[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.18.2",
  "pytest",
  "types-requests>=2.32.4.20250913",
  "types-tqdm>=4.67.0.20250809",
]

[tool.hatch.envs.types.scripts]
check = "mypy --strict {args:src}"
