[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airline-agent"
version = "0.1.0"
description = "A demo agent for an airline"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "beautifulsoup4>=4.14.2",
  "html5lib>=1.1",
  "llama-index-core>=0.14.6",
  "llama-index-embeddings-openai>=0.5.1",
  "llama-index-llms-openai>=0.6.1",
  "llama-index-retrievers-bm25>=0.6.5",
  "pydantic-ai>=1.0.13",
  "pydantic>=2.11.9",
  "python-dotenv>=1.0.0",
  "tqdm>=4.67.1",
  "cleanlab_codex>=1.0.30",
  "selenium>=4.10.0",
  "fastapi[standard]>=0.116.2",
  "pandas>=2.2.3",
  "timezonefinder[numba]==8.1.0",
]

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.envs.default.scripts]
create-demo-project = "python -m airline_agent.cleanlab_utils.create_new_demo_project {args}"
generate-flights = "python -m airline_agent.data_preparation.generate_flights"
open-project = "python -m airline_agent.cleanlab_utils.open_project {args}"
fetch-pages = "python -m airline_agent.data_preparation.fetch_pages"
create-vector-database = "python -m airline_agent.preprocessing.create_vector_database"
backend-server = "python -m airline_agent.backend.app {args}"


[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.18.2",
  "pytest",
  "types-requests>=2.32.4.20250913",
  "types-tqdm>=4.67.0.20250809",
  "pandas-stubs>=2.2.0.240528",
]

[tool.hatch.envs.types.scripts]
check = "mypy --strict {args:src}"
